change header to position fixed and add spacing to article

--- a/devisio/common/static/sass/devisio.sass
+++ b/devisio/common/static/sass/devisio.sass
@@ -32,7 +32,7 @@ header
   background-color: #f5f5f5
   height: 64px
   vertical-align: bottom
-  position: relative
+  position: fixed
   z-index: 40
 
   .container
@@ -62,6 +62,7 @@ header
         padding: 17px 15px
 
 article
+  padding-top: 64px
   background-color: #ffffff
   min-height: 100%
   @include box-shadow(0 20px 15px 0 #191919)
